# ChangeLog for dev-util/boost-build
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/boost-build/ChangeLog,v 1.122 2013/09/26 17:28:33 ago Exp $

  26 Sep 2013; Agostino Sarubbo <ago@gentoo.org> boost-build-1.52.0-r1.ebuild:
  Stable for arm, wrt bug #455464

  22 Sep 2013; Agostino Sarubbo <ago@gentoo.org> boost-build-1.52.0-r1.ebuild:
  Stable for alpha, wrt bug #455464

  22 Sep 2013; Agostino Sarubbo <ago@gentoo.org> boost-build-1.52.0-r1.ebuild:
  Stable for ppc, wrt bug #455464

  22 Sep 2013; Agostino Sarubbo <ago@gentoo.org> boost-build-1.52.0-r1.ebuild:
  Stable for ppc64, wrt bug #455464

  22 Sep 2013; Agostino Sarubbo <ago@gentoo.org> boost-build-1.52.0-r1.ebuild:
  Stable for ia64, wrt bug #455464

  22 Sep 2013; Agostino Sarubbo <ago@gentoo.org> boost-build-1.52.0-r1.ebuild:
  Stable for x86, wrt bug #455464

  14 Sep 2013; Agostino Sarubbo <ago@gentoo.org> boost-build-1.52.0-r1.ebuild:
  Stable for amd64, wrt bug #455464

*boost-build-1.54.0 (27 Aug 2013)

  27 Aug 2013; Sergey Popov <pinkbyte@gentoo.org> +boost-build-1.54.0.ebuild,
  +files/boost-build-1.54.0-fix-test.patch,
  +files/boost-build-1.54.0-support_dots_in_python-buildid.patch:
  Version bump, wrt bug #475712

  25 Aug 2013; Jeroen Roovers <jer@gentoo.org> boost-build-1.52.0-r1.ebuild:
  Stable for HPPA (bug #455464).

*boost-build-1.53.0 (12 Feb 2013)

  12 Feb 2013; Diego E. Pettenò <flameeyes@gentoo.org>
  +boost-build-1.53.0.ebuild, -boost-build-1.53.0_beta1.ebuild:
  Bump to 1.53.0 final.

*boost-build-1.53.0_beta1 (25 Jan 2013)

  25 Jan 2013; Diego E. Pettenò <flameeyes@gentoo.org>
  +boost-build-1.53.0_beta1.ebuild, -boost-build-1.46.1.ebuild,
  -boost-build-1.51.0.ebuild:
  Version bump. Remove obsolete.

  08 Dec 2012; Fabian Groffen <grobian@gentoo.org>
  +files/boost-build-1.49.0-darwin-gentoo-toolchain.patch,
  +files/boost-build-1.52.0-darwin-no-python-framework.patch,
  boost-build-1.52.0-r1.ebuild,