@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX boost-build-1.42-env-whitespace.patch 683 SHA256 52714f45a54cad8c126d5fca8bd5eacc4d746b29df24aaa9d2c55e3694a6f4aa SHA512 91adaafcfa3aabc570300c97341297bffb0edbba7e8cf2079e75ceca41f306c3e44f54eef1e02ca9efadb6a8d561ec427111f8bcf27ea2e19159bf6f95999672 WHIRLPOOL e413c2ff39725fdb8e3ef2d57828ad3f0d1e49b269411cb47d82a90881f1a2ca6ded9ba202d20e64e71d9a17cada942b6ff3a9d2f906eebe79283fa978555075
 AUX boost-build-1.48.0-disable_python_rpath.patch 337 SHA256 979727bd1aabf6df05d8b06e3ac525bb6d44c2b18c3e4e1331528c4633b7e9df SHA512 4244814e05c15478992a775b9f63fc0b7477caa4770af7f61f0e664af7e681c33c3a5be3b6842e1d4e159af43adde820d00cc0f92c990cea59899ec0aa2d273c WHIRLPOOL 3d395f0adb341430192f2bc3507d8f585ea2afe7cedcbfd95e5b6fce53fd6cf34b5a612d36937cf3413f38e20f9b2bb72938f1b1fb07895f63297d5e4c4c2a6e
@@ -15,26 +15,22 @@ DIST boost_1_49_0.tar.bz2 48499961 SHA256 dd748a7f5507a7e7af74f452e1c52a64e651ed
 DIST boost_1_52_0.tar.bz2 54421709 SHA256 222b6afd7723f396f5682c20130314a10196d3999feab5ba920d2a6bf53bac92 SHA512 fc512d3bfa6a39a60fee548775c97239271cf757587b8df7ed739c800844a819a359dca172be0e69ad7752753753139bf11f0813d650066d58386662fe32842d WHIRLPOOL 73bbab4a1d2a652200f4b5e669440a2afcebcea96a1139ecc75213067ca32d5cadb0f060bb0ec2e29e9e31272fb7ec9d2cb960801032ee6c5dcb86564766411d
 DIST boost_1_53_0.tar.bz2 55765258 SHA256 f88a041b01882b0c9c5c05b39603ec8383fb881f772f6f9e6e6fd0e0cddb9196 SHA512 8cd7806653cb6ea4a1c6862796ef698de5ae0bdbda96954fedbe090c59e3e6cb8f8d385df35183e9063ac4e2c2fccf10744516c47a994cde5f1d1cba1b07e522 WHIRLPOOL e8c5ed6b34dd5f68dc7e102a9e22b302616a65077d3f4af370ece6352b02a866e04294a4fc76bbd5555b6a4131f590e6455e6a74b5f12c4ffc2dd15af0bc8746
 DIST boost_1_54_0.tar.bz2 57873778 SHA256 047e927de336af106a24bceba30069980c191529fd76b8dff8eb9a328b48ae1d SHA512 3467a2bb9b4797cadfc52150cb036939ef35263f421870897dbe9492d1504a714805668a193b0811fdaf39a3527ee693ff70da5b942d7ab11b307e2e693e1760 WHIRLPOOL dbe3cbecaccf86ca184cf73cff75c17d6307b680bab098e38a9efd24d17776481e597017fc9f8fc8f488495f315c6d2b14b9212c51cf98529c302482bf67e92a
+DIST boost_1_55_0.tar.bz2 58146647 SHA256 fff00023dd79486d444c8e29922f4072e1d451fc5a4d2b6075852ead7f2b7b52 SHA512 dc606477f4c303e8f40de2586c16394b6d758e198b35bf3a7d3e576a2f49171aadc4f95e8d685fa731bc4e61e19869d5a24e1e816febfca9de078d66e096e041 WHIRLPOOL 6ae111d6a956651bd91914432b743faffeb466703191b05193db47f02fd3528a14ce200f26c1ab77bf2c68994eb5b135b0176f66a746964d334b4793ba113ad5
 EBUILD boost-build-1.49.0.ebuild 3409 SHA256 255344ee046ebdb39073ec68058629fc1c13f6b396f7e8b38b7d56f10de5cd21 SHA512 8b0cad7b8af43843d0a004494cdfb396cfafe26fd78095fcc8dabccb89cca0250868c7f1e76955fab1829869eae5741739cf848128c304c57251ba35d4dd1ac3 WHIRLPOOL df250e18c580f16decae85b73d6121a2e28042b34eebfd6b8589fdb568ce55a3a62b3c23a1ffaca83b2f1a5576128678f476449087a46216504f6c025273f3e9
 EBUILD boost-build-1.52.0-r1.ebuild 3814 SHA256 d51ab96e8692ff0d20ad2c1b2d577728636d7356ad9f3eb23612691e8aa8737c SHA512 f0ff9592479759c8b58f6ab429c2dfff95d91ea21eaf08a895229bad1c4faadb6a69457feeac84ca7c4adf425413463516fb8d3a01f31ab521685116cd901e9a WHIRLPOOL a6eb6556a97f87b1bc33b0aa9f100eba6ff3b8060aa9c5bbf39d2df39016a29052afe7170c8896052958f544329b87f7da5ab4bf48a0420ff74819db63cd07b0
 EBUILD boost-build-1.53.0.ebuild 3824 SHA256 72ed7a9a8dec4fed8ded49c44a5bf0e14eebd0cdbaeb8003db169bc08f692268 SHA512 cc43503e0d90c9c8c14a6d67ef77dc89ef533b4ea0debc7e9b13abf898b7af7db44871a32b11bc020d33b509017837bc556538f55ddeb73947b239c093979bda WHIRLPOOL 3a21d8cc56d5a42e3ec63ee29328569e21e66a6352e613dd92036780fcd3a16e3e21f7ba33fa1e8b4a2b7fbc0a38be549c331a5e47f7b0fbd89342da210b42fc
 EBUILD boost-build-1.54.0.ebuild 3823 SHA256 1129f7071e914bcb35f25f2bb361c0fc0392f11b1eebe164a210679e1e1c989a SHA512 0e74d08b93eed42fc5ef20351942a28a1a4d58bd6d263be9e261ff99458c6d55a495898454c8c994c570e85b00ae1171c2a323eab162c1a6080c2f659b51ac51 WHIRLPOOL 802ec03f90ed2475a2ed7ae77a0626b149d255dcee85770eaff68fcb46bba9ee66a5cac5b196c4c546ec0d363e9e4527ccd13daa6f5fdde9e1a3755a2a8fd28b
-MISC ChangeLog 17996 SHA256 ce594e844489ec116858a8061e534489092bd9b789bd57fe0aac49d3c0aed35d SHA512 4c6c56614a58e5a6987bd8dfffba7881b60f3ac7c9e94faf19c7a72e2e13dc5570d50ba9e6654272a465c2c48c1d1621c1bd34aba6a259ce7dded74964b24739 WHIRLPOOL 94c2abfe6d6c60d8a2622b2b302a65ec46a22f024611fd7fb1c513c8ce90d64dd3aec7c95b16111e6ca14153a10fc604c157ee0f46f7cca906fac0fb3a3b14ff
+EBUILD boost-build-1.55.0.ebuild 3823 SHA256 498bd0c16c39b79f8168baa8838b777f0326b0122fd5379ae5d79f277325d46c SHA512 9327f9498072cf2ab8336ed5b89d9339943695f9d2bb7a5742a676e2884c1a84fa4df2ec1b5c9836b6540a236e7daf55b5212c20899672f19489ed65280b1155 WHIRLPOOL f23e7360d5d615ab8666aaef7906136e8abed3d8add9657bcba63089646978dc4160e6f92da08925df3d166f66a0fb647d9b90fb5b08ca0eb7637f1cdec501f8
+MISC ChangeLog 18147 SHA256 48923da02b1b8af2c9327d0f99d555411367c9d98d3cedaa7e3bb17d7dc5339a SHA512 c454a174dc6a86bc03caf515e6f86c0f672fcabf8ca9157c5063a595d38156f96f9f15c5a8d6d78f504ea121038cdb40ab21ca62cb4cd3d0ff8b5878e7c58395 WHIRLPOOL 253a2f0994ac14f6aaed484e0cb7e4063d62281aa5f39b62c5917151f9a723db0160757c5cfcc2a1fece9e47f61d8da125c7f2e7db9c471757317544149d0795
 MISC metadata.xml 158 SHA256 b52dff4a9d9f4eab0428972c9ee5a96df08f39325e4b491c39493da499fedf51 SHA512 5300260c2c2bad38b7a27b5c1d609b48b105034c63807958425e8f8fbcccc02a408bb5565480bb3ee3c87d368ed16859c48b447241adf15896e7508c6c442e65 WHIRLPOOL 17880f728fdb3dbd6ca582547c3c546ffe798d89d37ac717bc0be4e4764b60b867979c996ca89f4fdeedee021c419b964405b5fb674a220e582a436f653b8f30
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSRG3vAAoJELp701BxlEWfSxkP/33N5wkDpejGNIcM2UijdKHh
-I6CqQ2PCAM1Ga5iq87cMFtIyK/OEMT2E5/8M8oRCkZoeKAeciBclXA3nljfDa8ID
-f+/nMxHtAvW33q4qiLjl6GKpRVsHrOkgITRE0kKZyzuovj0VqDKMCxRVQVXWOWV9
-4dnN2iIcqb81IZnh/n43WAc1kYccMj+k4AWr12IPZkd47y3z7U82tn4KqVOvlVRB
-Tqex8mfgusnKOwFZg/lhJuDkxEsryQkEXvRdmmtBCGI6tEtF9HHVYGc7V22z8Kbe
-64VQ8SYar6CAHUIUSqy5LeixDlz02xy9NHHy2ye5OeAgxOW/qYLCa2l5o/PCoRo0
-TLDtHaHLAS0H4QKu71gclMRev9fKzj1NrkPKoBcBZ8H0m0/K6y4k+YYxwBjKZHXF
-Y1NmKjD/Ey0S3o/Fww2L9L/RcGFU+M4SFdfDQ2HH/3/cWtj98lvpEjAajhE55vcX
-ITVeQ6iA9P+APYF+Xngw/IeIySTt3zOXfItwjyr5gpTYSm4kL9vtOJjGLnvWQX+8
-M29a4JXCrRufq1ie5qnuJpjzatG7dpmAvQwnnC7+rLKRmvkumK3mu8zLiPxucfEx
-VhYQe34cUYfechXA/QGm4lPIXgvEAMXo998IME1XutV09WZDcmO2g6gDE4Ir8tyA
-bcEisSr9vgReoOYu7uvt
-=sfoA
+iQEcBAEBCAAGBQJShQCjAAoJECo/aRed92679YMH/jb+LBkRmIXipAxpZ/HYPao4
+uRliQlxXpX4H4w8Dz0THAK+MQfl3bBzDLzh3uBGnPTjCyoQVHAY9WgfHzz7JxKt4
+tGGUEsrRiwIlahYE+eswN0a43hMOGZGYbFqZ4pz84er6OZ39DayCkcPBwY14jI8Q
+9/OX331lNCAtwyTzmrAmescyqvP8cWgTCUc+tGkqaHxgq/cswAX2q42OtLp29gBc
+a2yO8M7sRIERn4+MANasosTm9Cw2gZWjQzC9GX4k+nec2GikiK3ffkF1RdNaFLlR
+pvCEbgsvMNZKtm/miaTCQguMcEJrVqEuguEtB+khIYA/3LAHpo1Vr24sAY+Qurw=
+=DJ+d
 -----END PGP SIGNATURE-----
