@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/boost-build
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/boost-build/ChangeLog,v 1.122 2013/09/26 17:28:33 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/boost-build/ChangeLog,v 1.123 2013/11/14 16:56:02 pinkbyte Exp $
+
+*boost-build-1.55.0 (14 Nov 2013)
+
+  14 Nov 2013; Sergey Popov <pinkbyte@gentoo.org> +boost-build-1.55.0.ebuild:
+  Version bump, wrt bug #491064
 
   26 Sep 2013; Agostino Sarubbo <ago@gentoo.org> boost-build-1.52.0-r1.ebuild:
   Stable for arm, wrt bug #455464
